fixes side menu alignemnt
Summary:

Test Plan:

--- a/website/src/css/custom.scss
+++ b/website/src/css/custom.scss
@@ -586,6 +586,10 @@ td .label {
   );
 }
 
+.menu_SIkG {
+  padding: 48px 16px 16px 16px !important;
+}
+
 .sidebar_node_modules-\@docusaurus-theme-classic-lib-theme-DocSidebar-Desktop-styles-module {
   padding: 48px 16px 16px 16px !important;
   .menu {
